fixed typos in script titles, added mongolab persistent db

--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "hubot": ">= 2.6.0 < 3.0.0",
-    "hubot-irc": "^0.2.1",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "scraper": "0.0.9",
     "cheerio": "~0.14.0",
     "clark": "~0.0.6",
     "cleverbot-node": "~0.1.6",
     "flip": "~0.1.1",
     "githubot": "~0.5.0",
     "htmlparser": "~1.7.7",
+    "hubot": "~2.7.2",
+    "hubot-irc": "^0.2.1",
+    "hubot-scripts": "~2.5.11",
     "jsdom": "~0.10.4",
+    "mongodb": "^1.4.0",
+    "scraper": "0.0.9",
     "soupselect": "~0.2.0",
     "textspark": "~0.1.0",
     "tumblrbot": "~0.1.0",
