--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "htmlparser": "~1.7.7",
     "hubot": "~2.7.2",
     "hubot-dogeme": "^1.0.0",
+    "hubot-plusplus": "^1.1.1",
     "hubot-scripts": "~2.5.11",
     "hubot-slack": "^2.2.0",
     "jsdom": "~0.10.4",
